added other planets to the solar system

--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
         <div class="Mercury">
           <img src="./Assets/images/mercury.png" alt="" />
         </div>
+        <div class="venus_orbit"></div>
+        <div class="Venus">
+          <img src="./Assets/images/Venus.png" alt="" />
+        </div>
+        <div class="earth_orbit"></div>
+        <div class="Earth">
+          <img src="./Assets/images/earth.png" alt="" />
+        </div>
+        <div class="mars_orbit"></div>
+        <div class="Mars">
+          <img src="./Assets/images/mars.png" alt="" />
+        </div>
+        <div class="jupyter_orbit"></div>
+        <div class="Jupiter">
+          <img src="./Assets/images/jupyter.png" alt="" />
+        </div>
+        <div class="saturn_orbit"></div>
+        <div class="Saturn">
+          <img src="./Assets/images/saturn.png" alt="" />
+        </div>
+        <div class="uranus_orbit"></div>
+        <div class="Uranus">
+          <img src="./Assets/images/uranus.png" alt="" />
+        </div>
+        <div class="neptune_orbit"></div>
+        <div class="Neptune">
+          <img src="./Assets/images/neptune.png" alt="" />
+        </div>
       </div>
     </div>
   </body>
